correct items on mobile version

--- a/src/css/covers.css
+++ b/src/css/covers.css
@@ -12,11 +12,11 @@
 }
 
 .reviews-item {
-	display: none;
 	max-width: 343px;
 	box-sizing: border-box;
 	overflow: hidden;
 	text-overflow: ellipsis;
+
 }
 
 .reviews-item:hover {
@@ -48,6 +48,7 @@
 	padding: 32px 24px 32px 24px;
 	border: 1px solid var(--border-color);
 	border-radius: 20px;
+	overflow: auto;
 }
 
 /*
